--- a/styles/main.css
+++ b/styles/main.css
@@ -10,19 +10,35 @@ html {
 :root {
   --background-footer: #151515;
   --color-link: #ffffff;
+  --color-hover: #0066ff;
 }
 body {
   font-size: 1.6 rem;
+  line-height: 1.3;
   font-weight: 400;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
-.contener {
+
+ul {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  transition: 0.3s linear;
+}
+
+.link:hover {
+  color: var(--color-hover);
+  cursor: pointer;
+}
+.container {
   max-width: 1220px;
   margin: 0 auto;
-  padding: 0 1rem;  
+  padding: 0 1rem;
 }
-.header{
-    background-color: var(--background-footer);
+.header {
+  background-color: var(--background-footer);
 }
 .header__inner {
   padding-top: 4rem;
@@ -30,18 +46,72 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
- 
 }
 
 .menu__list {
   display: flex;
   gap: 3.5em;
-
-  list-style: none;
 }
 .menu__link {
   color: var(--color-link);
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+/*footer*/
+.footer {
+  background-color: var(--background-footer);
+  padding: 5rem 0 3.2rem 0;
+  color: var(--color-link);
+}
+.footer__menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 5rem;
+}
+.footer__menu-title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  word-wrap: break-word;
+  margin: 0 0 2rem 0;
+}
+.footeer__menu-item + .footeer__menu-item {
+  padding-top: 2rem;
+}
+.footer__menu-link {
+  color: var(--color-link);
+}
+.footer__menu-list{    
+   max-width: 250px;
+   padding: 0;
+}
+.app__list {
+  display: flex;
+  justify-content: center;
+  gap: 4rem; 
+  margin-bottom: 5rem;
+}
+.footer__copy {
+    max-width: 80.6rem;
+     margin: 0 auto 3rem;
+}
+.footer__copy-text {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 0 0 0.5rem;
+}
+.link-tel {
+  text-decoration: underline;
+  color: var(--color-link);
+}
+.copy__nav-list {
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+}
+.copy__nav-link {
+  font-size: 1.6rem;
+  color: var(--color-link);
 }
